--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -765,3 +765,9 @@ CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
 
 # Wakelock
 CONFIG_BOEFFLA_WL_BLOCKER=y
+
+# Devfreq boost
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=1000
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=3221
