--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -545,6 +545,12 @@ config NX30P6093
 	  usb_psy to disable CC detection on the event of any water/debris
 	  detected at USBIN.
 
+config AUTOCUT_CHARGER
+	bool "AutoCut Charger"
+	default n
+	help
+	  Disable battery charging if battery capacity at 100.
+
 config BATTERY_CW2015
 	tristate "CW2015 battery driver"
 	depends on I2C
