--- a/drivers/power/supply/Makefile
+++ b/drivers/power/supply/Makefile
@@ -79,3 +79,4 @@ obj-$(CONFIG_NX30P6093)		+= nx30p6093.o
 obj-$(CONFIG_BATTERY_CW2015)	+= cw2015_battery.o
 obj-$(CONFIG_GAUGE_CW2017)	+= cw2017_fuel_gauge.o
 obj-$(CONFIG_SMB358_CHARGER)	+= smb358-charger.o
+obj-$(CONFIG_AUTOCUT_CHARGER)   += autocut_charger.o
