--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1339,6 +1339,11 @@ config CC_OPTIMIZE_FOR_SIZE
 
 endchoice
 
+config LTO_GCC
+	select LTO
+	bool "Enable Link Time Optimization"
+	select THIN_ARCHIVES
+
 config SYSCTL
 	bool
 
