charging: Increase Charging Speed Level's
Signed-off-by: Sudhir Yadav <sudhiryadav.igi@gmail.com>
Signed-off-by: ItoRenz <ridwan.ri214@gmail.com>

--- a/arch/arm64/boot/dts/qcom/xiaomi/landtoni/land/batterydata-qrd-feimaotui-4v4-4000mah.dtsi
+++ b/arch/arm64/boot/dts/qcom/xiaomi/landtoni/land/batterydata-qrd-feimaotui-4v4-4000mah.dtsi
@@ -1,6 +1,7 @@
 
 qcom,2336564_wingtech_s88537a1scud_4000mah_averaged_masterslave_mar1st2016 {
 	qcom,max-voltage-uv = <4400000>;
+	qcom,fastchg-current-ma = <3500>;
 	qcom,nom-batt-capacity-mah = <4100>;
 	qcom,batt-id-kohm = <10>;
 	qcom,battery-beta = <4250>;
