--- a/arch/arm64/boot/dts/qcom/xiaomi/rova/riva/battery/batterydata-wingtech-desai_SAMSUNG-4v4-4000mah.dtsi
+++ b/arch/arm64/boot/dts/qcom/xiaomi/rova/riva/battery/batterydata-wingtech-desai_SAMSUNG-4v4-4000mah.dtsi
@@ -15,6 +15,7 @@
 qcom,wingtech-desai-4v4-4000mah-data {
 	qcom,default-rbatt-mohm = <116>;
 	qcom,max-voltage-uv = <4400000>;
+	qcom,fastchg-current-ma = <3500>;
 	qcom,fcc-mah = <4000>;
 	qcom,rbatt-capacitive-mohm = <10>;
 	qcom,v-cutoff-uv = <3400000>;
