--- a/arch/arm64/boot/dts/qcom/xiaomi/landtoni/land/batterydata-qrd-Coslight-4v4-4000mah.dtsi
+++ b/arch/arm64/boot/dts/qcom/xiaomi/landtoni/land/batterydata-qrd-Coslight-4v4-4000mah.dtsi
@@ -1,6 +1,7 @@
 
 qcom,2336567_wingtech_s88537a1coslight_4000mah_averaged_masterslave_mar3rd2016 {
 	qcom,max-voltage-uv = <4400000>;
+	qcom,fastchg-current-ma = <3500>;
 	qcom,nom-batt-capacity-mah = <4000>;
 	qcom,batt-id-kohm = <100>;
 	qcom,battery-beta = <4250>;
