--- a/arch/arm64/boot/dts/qcom/xiaomi/landtoni/santoni/batterydata-qrd-Desay-4v4-4100mah.dtsi
+++ b/arch/arm64/boot/dts/qcom/xiaomi/landtoni/santoni/batterydata-qrd-Desay-4v4-4100mah.dtsi
@@ -1,6 +1,7 @@
 
 qcom,2312442_wingtech_a12desay_4000mah_averaged_masterslave_feb1st2016 {
 	qcom,max-voltage-uv = <4400000>;
+	qcom,fastchg-current-ma = <3500>;
 	qcom,nom-batt-capacity-mah = <4100>;
 	qcom,batt-id-kohm = <30>;
 	qcom,battery-beta = <4100>;
