--- a/arch/arm64/boot/dts/qcom/xiaomi/rova/riva/battery/batterydata-wingtech-feimaotui_SONY-4v4-4000mah.dtsi
+++ b/arch/arm64/boot/dts/qcom/xiaomi/rova/riva/battery/batterydata-wingtech-feimaotui_SONY-4v4-4000mah.dtsi
@@ -13,6 +13,7 @@
 
 qcom,wingtech-feimaotui-4v4-4000mah-data {
 	qcom,default-rbatt-mohm = <140>;
+	qcom,fastchg-current-ma = <3500>;
 	qcom,max-voltage-uv = <4400000>;
 	qcom,fcc-mah = <2300>;
 	qcom,rbatt-capacitive-mohm = <50>;
