--- a/arch/arm64/boot/dts/qcom/xiaomi/rova/rolex/battery/batterydata-wingtech-xingwangda_ATL-4v4-3030mah.dtsi
+++ b/arch/arm64/boot/dts/qcom/xiaomi/rova/rolex/battery/batterydata-wingtech-xingwangda_ATL-4v4-3030mah.dtsi
@@ -13,6 +13,7 @@
 qcom,wingtech-xingwangda-4v4-3030mah-data {
 	qcom,default-rbatt-mohm = <120>;
 	qcom,max-voltage-uv = <4400000>;
+	qcom,fastchg-current-ma = <3500>;
 	qcom,rbatt-capacitive-mohm = <10>;
 	qcom,v-cutoff-uv = <3400000>;
 	qcom,chg-term-ua = <100000>;
