--- a/arch/arm64/boot/dts/qcom/msm8937.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8937.dtsi
@@ -24,7 +24,7 @@
 	interrupt-parent = <&wakegic>;
 
 	chosen {
-		bootargs = "kpti=0 noirqdebug norandmaps quiet nodebugmon";
+		bootargs = "kpti=0 noirqdebug norandmaps quiet nodebugmon rcu_nocbs=0-7";
 	};
 
 	firmware: firmware {
