--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -272,6 +272,7 @@ CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_CMA=y
 CONFIG_ZRAM=y
+CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="lz4"
 CONFIG_ZRAM_DEDUP=y
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_BLK_DEV_LOOP=y
@@ -806,3 +807,8 @@ CONFIG_BATTERY_SAVER=y
 
 # Touch Boost
 CONFIG_TOUCHBOOST=y
+
+#LZ4
+CONFIG_CRYPTO_LZ4=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
