--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -122,6 +122,8 @@ CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_UCLAMP_ASSIST=y
 CONFIG_TA_STUNE_BOOST=15
 CONFIG_CPU_FREQ_MSM=y
+CONFIG_CPU_FREQ_STAT=y
+CONFIG_CPU_FREQ_STAT_DETAILS=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
