--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1357,6 +1357,9 @@ config LTO_GCC
 	bool "Enable Link Time Optimization"
 	select THIN_ARCHIVES
 
+config GCC_GRAPHITE
+	bool "Enable GCC Polyhedral Loop Optimization (Graphite)"
+
 config SYSCTL
 	bool
 
