ANDROID: add BFQ I/O scheduler
* from here: https://github.com/KudProject/kernel_msm-4.9/tree/a11/bfq
* All credit goes to their respective authors , I just squashed all commits together.
* Also thanks to krasCGQ

Signed-off-by: GhostMaster69-dev <rathore6375@gmail.com>
Signed-off-by: rk134 <rk134@pixelexperience.org>

--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -845,3 +845,8 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 # Dynamic FSync
 CONFIG_DYNAMIC_FSYNC=y
+
+# IO Schedulers
+CONFIG_IOSCHED_BFQ=y
+CONFIG_BFQ_GROUP_IOSCHED=y
+# CONFIG_DEFAULT_BFQ is not set
