--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -64,6 +64,8 @@ CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
 CONFIG_HZ_100=y
+CONFIG_HZ_300=n
+CONFIG_HZ=100
 CONFIG_CMA=y
 CONFIG_ZSMALLOC=y
 # CONFIG_PROCESS_RECLAIM is not set
