--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -266,6 +266,9 @@ CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_HTB=y
 CONFIG_NET_SCH_PRIO=y
 CONFIG_NET_SCH_INGRESS=y
+CONFIG_NET_SCH_DEFAULT=y
+CONFIG_DEFAULT_PFIFO_FAST=y
+CONFIG_DEFAULT_NET_SCH="pfifo_fast"
 CONFIG_NET_CLS_FW=y
 CONFIG_NET_CLS_U32=y
 CONFIG_CLS_U32_MARK=y
