--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -771,3 +771,6 @@ CONFIG_DEVFREQ_BOOST=y
 CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
 CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=1000
 CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=3221
+
+# Fast Charge
+CONFIG_FORCE_FAST_CHARGE=y
