defconfig: Enable kernelspace battery saver

--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -774,3 +774,6 @@ CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=3221
 
 # Fast Charge
 CONFIG_FORCE_FAST_CHARGE=y
+
+# Batterry Saver
+CONFIG_BATTERY_SAVER=y
