--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -27,7 +27,6 @@ CONFIG_SCHED_CORE_CTL=y
 CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_AUTOGROUP=y
-CONFIG_SCHED_TUNE=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
@@ -107,6 +106,10 @@ CONFIG_REMOVE_INPUT_BOOST_FREQ_PERF=979200
 CONFIG_LITTLE_CPU_MASK=63
 CONFIG_BIG_CPU_MASK=192
 CONFIG_DYNAMIC_STUNE_BOOST=y
+CONFIG_SCHED_TUNE=n
+CONFIG_UCLAMP_TASK=y
+CONFIG_UCLAMP_BUCKETS_COUNT=5
+CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_TA_STUNE_BOOST=15
 CONFIG_CPU_FREQ_MSM=y
 CONFIG_NET=y
