defconfig: Enable slmk
* little tune for not aggresive
* already disabled ANDROID_LOW_MEMORY_KILLER, MEMCG, PSI, PRLMK, PROCESS RECLAIM

Signed-off-by: ItoRenz <itorenz@nusantararom.org>

--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -526,8 +526,10 @@ CONFIG_GENERIC_EARLY_IOREMAP=y
 # CONFIG_IDLE_PAGE_TRACKING is not set
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 # CONFIG_PROCESS_RECLAIM is not set
-CONFIG_PRLMK=y
+# CONFIG_PRLMK is not set
 # CONFIG_PRLMK_DISABLE_KILL_HEAVIEST_GID is not set
+CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=16
 CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 CONFIG_SPECULATIVE_PAGE_FAULT=y
 CONFIG_ARM64_DMA_USE_IOMMU=y
