--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -119,6 +119,7 @@ CONFIG_SCHED_TUNE=n
 CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_BUCKETS_COUNT=20
 CONFIG_UCLAMP_TASK_GROUP=y
+CONFIG_UCLAMP_ASSIST=y
 CONFIG_TA_STUNE_BOOST=15
 CONFIG_CPU_FREQ_MSM=y
 CONFIG_NET=y
