--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -92,7 +92,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 CONFIG_CPU_INPUT_BOOST=n
 CONFIG_INPUT_BOOST_DURATION_MS=96
