defconfig: Enable ARCH HAS FAST MULTIPLIER
Signed-off-by: ItoRenz <ridwan.ri214@gmail.com>

--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -812,3 +812,6 @@ CONFIG_TOUCHBOOST=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
+
+# Fast Multiplier
+CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
