--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -847,6 +847,13 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_DYNAMIC_FSYNC=y
 
 # IO Schedulers
+CONFIG_IOSCHED_NOOP=y
+# CONFIG_IOSCHED_DEADLINE is not set
+CONFIG_IOSCHED_CFQ=y
+CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_BFQ_GROUP_IOSCHED=y
+CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_NOOP is not set
+CONFIG_DEFAULT_IOSCHED="cfq"
