defconfig: Enable more usb driver(nethunter stuff)
Signed-off-by: ItoRenz <itorenz@nusantararom.org>

--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -374,17 +374,8 @@ CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
 CONFIG_USB_RTL8152=y
 CONFIG_USB_USBNET=y
-# CONFIG_WLAN_VENDOR_ADMTEK is not set
-# CONFIG_WLAN_VENDOR_ATMEL is not set
-# CONFIG_WLAN_VENDOR_BROADCOM is not set
-# CONFIG_WLAN_VENDOR_CISCO is not set
-# CONFIG_WLAN_VENDOR_INTEL is not set
-# CONFIG_WLAN_VENDOR_INTERSIL is not set
-# CONFIG_WLAN_VENDOR_MARVELL is not set
-# CONFIG_WLAN_VENDOR_RSI is not set
-# CONFIG_WLAN_VENDOR_ST is not set
-# CONFIG_WLAN_VENDOR_TI is not set
-# CONFIG_WLAN_VENDOR_ZYDAS is not set
+CONFIG_USB_STORAGE_ENE_UB6250=y
+CONFIG_USB_UAS=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CLD_LL_CORE=y
 CONFIG_INPUT_EVDEV=y
@@ -901,6 +892,7 @@ CONFIG_WLAN_VENDOR_ATH=y
 CONFIG_WLAN_VENDOR_MEDIATEK=y
 CONFIG_WLAN_VENDOR_RALINK=y
 CONFIG_WLAN_VENDOR_REALTEK=y
+CONFIG_WLAN_VENDOR_ZYDAS=y
 
 # USB Serial
 CONFIG_USB_SERIAL_CONSOLE=y
@@ -909,6 +901,8 @@ CONFIG_USB_SERIAL_CH341=y
 
 # USB WIFI
 CONFIG_MAC80211=y
+CONFIG_CFG80211_WEXT=y
+CONFIG_MAC80211_MESH=y
 CONFIG_R8188EU=y
 CONFIG_WLAN_VENDOR_MEDIATEK=y
 CONFIG_MT7601U=y
@@ -938,3 +932,45 @@ CONFIG_RTLWIFI=y
 CONFIG_RTLWIFI_USB=y
 # CONFIG_RTLWIFI_DEBUG is not set
 CONFIG_RTL8192C_COMMON=y
+CONFIG_RTL8XXXU_UNTESTED=y
+CONFIG_ATH6KL_USB=y
+CONFIG_ATH6KL=y
+CONFIG_CARL9170=y
+CONFIG_ATH9K_HTC=y
+CONFIG_USB_ZD1201=y
+CONFIG_ZD1211RW=y
+CONFIG_USB_NET_RNDIS_WLAN=y
+
+# USB BT
+CONFIG_BT_HCIBTUSB=y
+CONFIG_BT_HCIBTUSB_BCM=y
+CONFIG_BT_HCIBTUSB_RTL=y
+CONFIG_BT_HCIUART=y
+CONFIG_BT_HCIBCM203X=y
+CONFIG_BT_HCIBPA10X=y
+CONFIG_BT_HCIBFUSB=y
+
+# MultiMedia
+CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
+CONFIG_MEDIA_SDR_SUPPORT=y
+CONFIG_USB_AIRSPY=y
+CONFIG_USB_HACKRF=y
+USB_MSI2500=y
+CONFIG_MEDIA_SUBDRV_AUTOSELECT=n
+CONFIG_DVB_RTL2830=y
+CONFIG_DVB_RTL2832=y
+CONFIG_DVB_RTL2832_SDR=y
+CONFIG_DVB_SI2168=y
+CONFIG_DVB_ZD1301_DEMOD=y
+
+# USB
+CONFIG_USB_ACM=y
+CONFIG_USB_CONFIGFS_SERIAL=y
+CONFIG_USB_CONFIGFS_ACM=y
+CONFIG_USB_CONFIGFS_OBEX=y
+CONFIG_USB_CONFIGFS_NCM=y
+CONFIG_USB_CONFIGFS_ECM=y
+CONFIG_USB_CONFIGFS_ECM_SUBSET=y
+CONFIG_USB_CONFIGFS_RNDIS=y
+CONFIG_USB_CONFIGFS_EEM=y
+CONFIG_USB_CONFIGFS_MASS_STORAGE=y
