--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -880,3 +880,8 @@ CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
+
+# eBPF features for Android 12
+CONFIG_KPROBES=y
+CONFIG_NET_ACT_BPF=y
+CONFIG_BPF_JIT=y
