--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -865,6 +865,9 @@ CONFIG_CRYPTO_LZ4=y
 CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 
+# Drivedroid
+CONFIG_USB_F_MASS_STORAGE=y
+
 # Fast Multiplier
 CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 
