defconfig: Enable sched_tune and cpusets
* Also tune cpuset for audio app and camera-daemon

Signed-off-by: ItoRenz <itorenz@nusantararom.org>

--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -117,7 +117,16 @@ CONFIG_REMOVE_INPUT_BOOST_FREQ_PERF=979200
 CONFIG_LITTLE_CPU_MASK=63
 CONFIG_BIG_CPU_MASK=192
 CONFIG_DYNAMIC_STUNE_BOOST=y
-CONFIG_SCHED_TUNE=n
+CONFIG_SCHED_TUNE=y
+CONFIG_CPUSET_ASSIST=y
+CONFIG_CPUSET_AUDIO_APP="1-2"
+CONFIG_CPUSET_BG="0-1"
+CONFIG_CPUSET_CAMERA="0-7"
+CONFIG_CPUSET_DISPLAY="4-7"
+CONFIG_CPUSET_FG="0-3,6-7"
+CONFIG_CPUSET_RESTRICTED="0-3"
+CONFIG_CPUSET_SYSTEM_BG="0-3"
+CONFIG_CPUSET_TOP_APP="0-7"
 CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_BUCKETS_COUNT=20
 CONFIG_UCLAMP_TASK_GROUP=y
