--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -118,6 +118,7 @@ CONFIG_LITTLE_CPU_MASK=63
 CONFIG_BIG_CPU_MASK=192
 CONFIG_DYNAMIC_STUNE_BOOST=y
 CONFIG_SCHED_TUNE=y
+CONFIG_STUNE_ASSIST=y
 CONFIG_CPUSET_ASSIST=y
 CONFIG_CPUSET_AUDIO_APP="1-2"
 CONFIG_CPUSET_BG="0-1"
