--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.9.319 Kernel Configuration
+# Linux/arm64 4.9.320 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -47,7 +47,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Rimuru-v3.2"
+CONFIG_LOCALVERSION="-Rimuru-v4.1"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="Tempest"
 CONFIG_SWAP=y
@@ -2128,6 +2128,7 @@ CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_TCG_TPM is not set
 CONFIG_MSM_SMD_PKT=y
 # CONFIG_XILLYBUS is not set
+# CONFIG_RANDOM_TRUST_BOOTLOADER is not set
 CONFIG_MSM_ADSPRPC=y
 CONFIG_MSM_RDBG=m
 
@@ -4328,7 +4329,6 @@ CONFIG_MSM_RPM_SMD=y
 CONFIG_QCOM_BUS_SCALING=y
 # CONFIG_QCOM_BUS_CONFIG_RPMH is not set
 CONFIG_QCOM_SECURE_BUFFER=y
-CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MSM_SMEM=y
 CONFIG_MSM_SMD=y
 CONFIG_MSM_SMD_DEBUG=y
@@ -5081,6 +5081,7 @@ CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
 # CONFIG_LOCK_TORTURE_TEST is not set
 CONFIG_STACKTRACE=y
+# CONFIG_WARN_ALL_UNSEEDED_RANDOM is not set
 # CONFIG_DEBUG_KOBJECT is not set
 CONFIG_HAVE_DEBUG_BUGVERBOSE=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
