defconfig: Enable Klapse
Signed-off-by: ItoRenz <itorenz@nusantararom.org>

--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -5509,3 +5509,5 @@ CONFIG_SBITMAP=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_NO_TECHPACK_AUDIO is not set
+CONFIG_KLAPSE=y
+CONFIG_KLAPSE_MDSS=y
