defconfig: Regen `mi8937_drfconfig` after upstream to 4.9.326
Signed-off-by: ItoRenz <itorenz@nusantararom.org>

--- a/arch/arm64/configs/mi8937_defconfig
+++ b/arch/arm64/configs/mi8937_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.9.325 Kernel Configuration
+# Linux/arm64 4.9.326 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -526,6 +526,8 @@ CONFIG_GENERIC_EARLY_IOREMAP=y
 # CONFIG_IDLE_PAGE_TRACKING is not set
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 # CONFIG_PROCESS_RECLAIM is not set
+CONFIG_PRLMK=y
+# CONFIG_PRLMK_DISABLE_KILL_HEAVIEST_GID is not set
 CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 CONFIG_SPECULATIVE_PAGE_FAULT=y
 CONFIG_ARM64_DMA_USE_IOMMU=y
@@ -3197,7 +3199,6 @@ CONFIG_QCOM_KGSL_IOMMU=y
 # ACP (Audio CoProcessor) Configuration
 #
 CONFIG_KLAPSE=y
-CONFIG_KLAPSE_MDSS=y
 
 #
 # Frame buffer Devices
@@ -4756,8 +4757,8 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
+# CONFIG_ANDROID_SIMPLE_LMK is not set
 # CONFIG_LIBNVDIMM is not set
-CONFIG_PRLMK=y
 CONFIG_NVMEM=y
 CONFIG_NVMEM_SYSFS=y
 # CONFIG_QCOM_QFPROM is not set
